Added header and footer components

--- a/sluzba-front/src/app/app.component.html
+++ b/sluzba-front/src/app/app.component.html
@@ -1,1 +1,13 @@
-<p>Test page</p>
+<div class="app-wrapper">
+  <app-header></app-header>
+  <main class="main-content">
+    <!-- Your content goes here -->
+    <h1>Welcome to My App</h1>
+    <p>
+      This section will always fill the screen height, regardless of the content
+      size.
+    </p>
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
+</div>
