--- a/sluzba-front/src/app/components/header/header.component.html
+++ b/sluzba-front/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
     </div>
     <ul class="nav-links">
       <ng-container *ngIf="isAuthenticated; else guestLinks">
-        <li><a routerLink="/">Profil</a></li>
+        <li><a routerLink="/teachers">Nastavnici</a></li>
         <li>
           <a (click)="logout()">Odjava</a>
         </li>
