--- a/sluzba-front/src/app/pages/AdminPages/Teachers/teachers.component.html
+++ b/sluzba-front/src/app/pages/AdminPages/Teachers/teachers.component.html
@@ -1,12 +1,16 @@
 <div class="container mt-3">
   <h3>Nastavnici</h3>
 
-  <button type="button" class="btn btn-primary mb-3" (click)="openModal()">
+  <button
+    type="button"
+    class="btn btn-primary mb-3"
+    (click)="openModal('addTeacherModal')"
+  >
     +
   </button>
 
-  <app-custom-modal [title]="'Dodavanje nastavnika'">
-    <form [formGroup]="addTeacherForm" (ngSubmit)="onSubmit()">
+  <app-custom-modal id="addTeacherModal" title="Dodavanje nastavnika">
+    <form [formGroup]="addTeacherForm" (ngSubmit)="onSubmit('addTeacherModal')">
       <div class="mb-3">
         <label for="email" class="form-label">Ime</label>
         <input
@@ -48,7 +52,11 @@
         />
       </div>
       <div class="d-flex justify-content-end gap-2">
-        <button type="button" class="btn btn-danger" (click)="onCloseForm()">
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="onCloseForm('addTeacherModal')"
+        >
           Odustani
         </button>
         <button type="submit" class="btn btn-success">Dodaj</button>
