--- a/sluzba-front/src/app/components/custom-modal/custom-modal.component.html
+++ b/sluzba-front/src/app/components/custom-modal/custom-modal.component.html
@@ -1,10 +1,10 @@
 <div
   class="modal fade"
-  [class.show]="modalService.isModalOpen$ | async"
+  [class.show]="modalService.isModalOpen(id) | async"
   tabindex="-1"
   role="dialog"
   aria-hidden="true"
-  [ngClass]="{ 'd-block': (modalService.isModalOpen$ | async) }"
+  [ngClass]="{ 'd-block': (modalService.isModalOpen(id) | async) }"
 >
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -26,8 +26,9 @@
     </div>
   </div>
 </div>
+
 <div
   class="modal-backdrop fade"
-  [class.show]="modalService.isModalOpen$ | async"
-  *ngIf="modalService.isModalOpen$ | async"
+  [class.show]="modalService.isModalOpen(id) | async"
+  *ngIf="modalService.isModalOpen(id) | async"
 ></div>
