--- a/sluzba-front/src/app/pages/AdminPages/Student/student.component.html
+++ b/sluzba-front/src/app/pages/AdminPages/Student/student.component.html
@@ -1,9 +1,15 @@
 <div class="container mt-3">
   <h3>Studenti</h3>
 
-  <button type="button" class="btn btn-primary mb-3">+</button>
+  <button
+    type="button"
+    class="btn btn-primary mb-3"
+    (click)="openModal('addStudentModal')"
+  >
+    +
+  </button>
 
-  <table *ngIf="!loading" class="table table-striped table-bordered mt-3">
+  <table *ngIf="!loading" class="table table-striped table-bordered mt-3 text-center">
     <thead class="table-dark">
       <tr>
         <th>Id</th>
@@ -20,9 +26,74 @@
         <td>{{ item.firstName }}</td>
         <td>{{ item.lastName }}</td>
         <td>{{ item.cardNumber }}</td>
-        <td>{{ item.balance }}</td>
+        <td>{{ item.balance | currency:'RSD':'code':'1.2-2':'sr' }}</td>
         <td>{{ item.accountNumber }}</td>
       </tr>
     </tbody>
   </table>
+
+  <app-custom-modal id="addStudentModal" title="Dodavanje studenta">
+    <form [formGroup]="addStudentForm" (ngSubmit)="onSubmit('addStudentModal')">
+      <div class="mb-3">
+        <label for="email" class="form-label">Ime</label>
+        <input
+          type="text"
+          class="form-control"
+          id="firstName"
+          formControlName="firstName"
+          placeholder="Unesite ime"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Prezime</label>
+        <input
+          type="text"
+          class="form-control"
+          id="lastName"
+          formControlName="lastName"
+          placeholder="Unesite prezime"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="cardNumber" class="form-label">Broj indeksa</label>
+        <input
+          type="text"
+          class="form-control"
+          id="cardNumber"
+          formControlName="cardNumber"
+          placeholder="Unesite broj indeksa"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Korisnicko ime</label>
+        <input
+          type="text"
+          class="form-control"
+          id="username"
+          formControlName="username"
+          placeholder="Unesite korisnicko ime"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Lozinka</label>
+        <input
+          type="password"
+          class="form-control"
+          id="password"
+          formControlName="password"
+          placeholder="Unesite lozinku"
+        />
+      </div>
+      <div class="d-flex justify-content-end gap-2">
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="onCloseForm('addStudentModal')"
+        >
+          Odustani
+        </button>
+        <button type="submit" class="btn btn-success">Dodaj</button>
+      </div>
+    </form>
+  </app-custom-modal>
 </div>
