--- a/sluzba-front/src/app/pages/AdminPages/Teachers/teachers.component.html
+++ b/sluzba-front/src/app/pages/AdminPages/Teachers/teachers.component.html
@@ -64,7 +64,7 @@
     </form>
   </app-custom-modal>
 
-  <table *ngIf="!loading" class="table table-striped table-bordered mt-3">
+  <table *ngIf="!loading" class="table table-striped table-bordered mt-3 text-center">
     <thead class="table-dark">
       <tr>
         <th>Id</th>
